--- a/project (Laravel)/.env.example
+++ b/project (Laravel)/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:cJUGQ+aPLoSe8wNfktgJ2mgD9Pt+R/Hrx7BKv8DAPR4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -63,3 +63,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+FLOWISE_CHATFLOW_ID="ID CHATFLOW DISINI"
